# NotamsInjector

./: .env.example  .gitignore  README.md  build.spec  config.yaml  main.py  obstacle_catalog.yaml  pyproject.toml  test_pipeline.py
.claude/: settings.local.json
.github/workflows/: build.yml
data/: acked_notams.json  msfs_model_validation_report.csv  mycube_test_title.txt  mycube_validation_report.csv  runway_closure_candidates_from_pdf.txt  runway_closure_candidates_known_simobjects.txt  runway_closure_candidates_pdf_shortlist.txt  runway_closure_candidates_pdf_top20.txt  runway_closure_validation_control2_report.csv  runway_closure_validation_known_simobjects_report.csv  runway_closure_validation_top20_report.csv  simobject_titles_community.txt
scripts/: build_rwy_x_package.py  download_airports.py  find_msfs_titles.py  pull_notams_eddf.py  test_simvars.py  validate_msfs_models.py
src/: config.py  scheduler.py
src/airports/: lookup.py  openaip.py
src/db/: cache.py
src/msfs/: atis.py  connector.py  navaids.py  notifier.py  objects.py  obstacle_catalog.py  wasm_state.py
src/notam/: classifier.py  fetcher.py  models.py  parser.py
src/ui/: main_window.py  tray.py
src/ui/widgets/: actions_panel.py  alert_overlay.py  log_panel.py  msfs_startup_dialog.py  notam_table.py  settings_window.py
