[project]
name = "notam-injector"
version = "0.1.0"
description = "Real-world NOTAM injector for Microsoft Flight Simulator 2024"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "httpx[asyncio]>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.6",
    "aiosqlite>=0.20",
    "SimConnect>=0.4.1",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
notam-injector = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "test_pipeline.py"]
